--- a/templates/main.html
+++ b/templates/main.html
@@ -15,10 +15,10 @@
     <form method="post" action="/unclean">
             <label for="un">Username</label>
             <input type="text" name="un" placeholder="Username"><br>
-            <label for="sd">Start Date (M-D-Y)</label>
-            <input type="date" name="sd" placeholder="02-11-2020" required><br>
-            <label for="sd">End Date (M-D-Y)</label>
-            <input type="date" name="ed" placeholder="02-11-2021" required>
+            <label for="sd">Start Date</label>
+            <input type="date" name="sd" placeholder="MM-DD-YYYY" required><br>
+            <label for="sd">End Date</label>
+            <input type="date" name="ed" placeholder="MM-DD-YYYY" required>
             <br>
             <a href="/unclean"><button type="submit">Submit</button></a>
     </center>
