added profanity and tweet counters

--- a/templates/unclean.html
+++ b/templates/unclean.html
@@ -8,7 +8,7 @@
     <div class="result">
         <a href="/">
             <span>
-                <center>Your tweets are <b>{{tweets[1]}}%</b> unclean!</center>
+                <center>Your tweets are <b>{{tweets[1]}}%</b> unclean! {{tweets[2]}} profanity(s) detected in {{tweets[3]}} tweet(s)</center>
             </span>
         </a>
     </div>
